--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "main": "index.html",
     "dependencies": {
         "@uirouter/angularjs": "^1.0.7",
-        "angular": "^1.6.9"
+        "angular": "^1.6.9",
+        "angular-animate": "^1.6.9",
+        "angular-aria": "^1.6.9",
+        "angular-material": "^1.1.8",
+        "angular-messages": "^1.6.9"
     }
 }
