--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "angular-animate": "^1.6.9",
         "angular-aria": "^1.6.9",
         "angular-material": "^1.1.8",
-        "angular-messages": "^1.6.9"
+        "angular-messages": "^1.6.9",
+        "soundex": "^0.2.1"
     }
 }
